--- a/src/profile/Profile.css
+++ b/src/profile/Profile.css
@@ -41,7 +41,7 @@
 .card-title {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #007bff;
+  color: #688c46;
 }
 
 .card-text {
@@ -52,7 +52,7 @@
 
 /* Icon styling */
 .icon {
-  color: #007bff; /* Blue color for icons */
+  color: #688c46;
 }
 
 /* Button styling */
