--- a/src/home/HomePage.css
+++ b/src/home/HomePage.css
@@ -139,3 +139,21 @@ button.card-button.btn.btn-primary {
     font-size: 2rem;
   }
 }
+
+.arrow-down i {
+  color: white;
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+  }
+  40% {
+      transform: translateY(-20px);
+  }
+  60% {
+      transform: translateY(-10px);
+  }
+}
+
