--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('./img/dumbbells-floor-gym-ai-generative.jpg') no-repeat center center fixed; 
+  background: url('./img/gpt.jpg') no-repeat center center fixed; 
   background-size: cover; /* Ensures the image covers the entire background */
   opacity: 0.9; /* Slightly transparent background */
   z-index: -1; /* Ensure it stays behind the content */
